# agentic-ml-studio

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: test_dataset_server_mcp.py
src/app/llm/: ollama_client.py  prompts.py
src/app/mcp/client/: dataset_client.py  reporting_client.py  training_client.py  visualization_client.py
src/app/mcp/dataset_server/: server.py  tools.py
src/app/mcp/reporting_server/: server.py  tools.py
src/app/mcp/training_server/: server.py  tools.py
src/app/mcp/visualization_server/: server.py  tools.py
src/app/services/: dataset_insights.py
src/app/ui/: 00_Dataset.py  Home.py  main.py
src/app/ui/pages/: 00_Dataset.py  01_Visualizations.py  02_Insights.py  02_Visualizations.py  03_Training.py  04_Reporting.py
tests/: dataset_server_test.py
tests/data/: sample.csv
